# dataset-viber

./: .gitignore  .pre-commit-config.yaml  LICENSE_HEADER  README.md  pyproject.toml
.github/workflows/: publish.yml
src/data_viber/: __init__.py  _constants.py  _utils.py  embedder.py
src/data_viber/_gradio/: __init__.py  _flagging.py  annotator.py  base.py  collector.py  explorer.py
src/data_viber/_plotly/: __init__.py  explorer.py
src/dataset_viber/: __init__.py  _constants.py  bulk.py  embedder.py  synthesizer.py
src/dataset_viber/_gradio/: __init__.py  _flagging.py  _import_export.py  annotator.py  collector.py
src/dataset_viber/_gradio/_mixins/: _argilla.py  _import_export.py  _task_config.py
src/dataset_viber/_plotly/: __init__.py  bulk.py  explorer.py
src/dataset_viber/examples/: fn_model.py  fn_next_input.py  fn_next_input_chat_preference.py  fn_next_input_image_preference.py  fn_next_input_synthesizer.py  fn_next_input_synthesizer_distilabel.py  interactive_components.py  log_to_csv.py  log_to_hub.py
