[project]
name = "data-viber"
version = "0.1.0"
description = "Data viber is your chill repo for data collection and vibe checks."
authors = [
    {name = "davidberenstein1957", email = "david.m.berenstein@gmail.com"},
]
requires-python = ">=3.9,<3.13"
readme = "README.md"
license = {text = "Apache 2.0"}
dependencies = [
    "gradio[oauth]>=4.41.0",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
"explorer" = [
    "sentence-transformers>=3.0.1",
    "umap-learn>=0.5.6",
    "altair>=5.3.0",
]

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.8.0",
    "ruff>=0.5.6",
    "pytest>=8.3.2",
    "black>=24.8.0",
    "transformers>=4.44.0",
    "torch>=2.4.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88

[tool.pdm]
distribution = true

