[project]
name = "dataset-viber"
version = "0.3"
description = "Dataset Viber is your chill repo for data collection, annotation and vibe checks."
authors = [
    {name = "davidberenstein1957", email = "david.m.berenstein@gmail.com"},
]
requires-python = ">=3.9,<3.13"
readme = "README.md"
license = {text = "Apache 2.0"}
dependencies = [
    "gradio[oauth]>=4.38,<5",
    "datasets>=2,<3",
    "argilla>=2,<3",
    "gradio-huggingfacehub-search>=0.0.7"
]

[project.optional-dependencies]
bulk = [
    "sentence-transformers>=3",
    "optimum[onnxruntime]>=1.10",
    "tabulate>=0.9.0",
    "umap-learn>=0.5,<1",
    "plotly>=5,<6",
    "dash>=2.11,<3",
    "dash-bootstrap-components>=1.6.0"
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.8.0",
    "ruff>=0.5,<1",
    "pytest>=8,<9",
    "black>=24,<25",
    "openpyxl>=3,<4",
]

